--- a/chugg_finder/package.xml
+++ b/chugg_finder/package.xml
@@ -57,6 +57,12 @@
   <run_depend>dynamic_reconfigure</run_depend>
   <build_depend>dynamic_reconfigure</build_depend>
 
+  <run_depend>pcl_conversions</run_depend>
+  <build_depend>pcl_conversions</build_depend>
+
+  <build_depend>libpcl-all-dev</build_depend>build_depend>
+  <run_depend>libpcl-all</run_depend>run_depend>
+
   <buildtool_depend>catkin</buildtool_depend>
   
   <!-- The export tag contains other, unspecified, tags -->
