Added velocity covariance.

--- a/chugg_tracker/cfg/ChuggFilter.cfg
+++ b/chugg_tracker/cfg/ChuggFilter.cfg
@@ -14,8 +14,10 @@ gen = ParameterGenerator()
 # Valid types: bool_t, int_t, double_t, str_t
 
 #          Name        Type   Reconfiguration level             Description                         Default Min Max
-gen.add( "predict_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 10,     1,  100 )
-gen.add( "marker_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 10,     1,  100 )
+gen.add( "system_ori_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 10,     1,  100 )
+gen.add( "system_ori_vel_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 10,     1,  100 )
+gen.add( "marker_ori_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 10,     1,  100 )
+gen.add( "marker_ori_vel_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 10,     1,  100 )
 
 # Example enum:
 # size_enum = gen.enum([ gen.const("Small", int_t, 0, "A small constant"),
