--- a/chugg_tracker/cfg/ChuggFilter.cfg
+++ b/chugg_tracker/cfg/ChuggFilter.cfg
@@ -18,6 +18,8 @@ gen.add( "system_ori_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very 
 gen.add( "system_ori_vel_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 10,     1,  100 )
 gen.add( "marker_ori_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 10,     1,  100 )
 gen.add( "marker_ori_vel_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 10,     1,  100 )
+gen.add( "prior_ori_vel_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 10,     1,  100 )
+gen.add( "samples", int_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 100,     10,  1000 )
 
 # Example enum:
 # size_enum = gen.enum([ gen.const("Small", int_t, 0, "A small constant"),
