--- a/chugg_tracker/package.xml
+++ b/chugg_tracker/package.xml
@@ -53,6 +53,8 @@
 
   <run_depend>cpp11</run_depend>
   <build_depend>cpp11</build_depend>
+  <run_depend>bfl</run_depend>
+  <build_depend>bfl</build_depend>
 
   <run_depend>dynamic_reconfigure</run_depend>
   <build_depend>dynamic_reconfigure</build_depend>
