--- a/chugg_tracker/package.xml
+++ b/chugg_tracker/package.xml
@@ -50,6 +50,12 @@
   <run_depend>sensor_msgs</run_depend>
   <build_depend>sensor_msgs</build_depend>
 
+  <run_depend>geometry_msgs</run_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <run_depend>message_generation</run_depend>
+  <build_depend>message_generation</build_depend>
+  <run_depend>message_runtime</run_depend>
+  <build_depend>message_runtime</build_depend>
 
   <run_depend>cpp11</run_depend>
   <build_depend>cpp11</build_depend>
