--- a/chugg_tracker/CMakeLists.txt
+++ b/chugg_tracker/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(chugg_tracker)
 set(CMAKE_BUILD_TYPE Debug)
+# set( CMAKE_VERBOSE_MAKEFILE on )
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
