--- a/imu_driver/package.xml
+++ b/imu_driver/package.xml
@@ -46,6 +46,8 @@
   <run_depend>uscauv_common</run_depend>
   <build_depend>tf</build_depend>
   <run_depend>tf</run_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <run_depend>geometry_msgs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
