--- a/chugg_tracker/cfg/ChuggFilter.cfg
+++ b/chugg_tracker/cfg/ChuggFilter.cfg
@@ -18,6 +18,7 @@ gen.add( "system_ori_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very 
 gen.add( "system_ori_vel_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 1,     0.00001,  10 )
 gen.add( "marker_ori_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 0.1,     0.00001,  10 )
 gen.add( "marker_ori_vel_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 0.1,     0.00001,  10 )
+gen.add( "imu_ori_vel_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 0.1,     0.00001,  10 )
 gen.add( "prior_ori_vel_cov", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 1,     0.00001,  100 )
 gen.add( "samples", int_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 100,     10,  1000 )
 
