More work on motor driver.

--- a/motor_driver/cfg/MotorManager.cfg
+++ b/motor_driver/cfg/MotorManager.cfg
@@ -10,11 +10,11 @@ import motor_driver.constants as mdc
 gen = ParameterGenerator()
 
 GPIO_PIN_ENUM = mdc.get_gpio_pin_enum(gen)
-MOTOR_RANGE_ENUM = mdc.get_motor_range_enum(gen)
+MOTOR_MODE_ENUM = mdc.get_motor_mode_enum(gen)
 
 gen.add( "hard_disable", bool_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", False)
-gen.add( "range", str_t, SensorLevels.RECONFIGURE_RUNNING, "", 
-         mdc.MOTOR_RANGES_RPM.keys()[0], edit_method=MOTOR_RANGE_ENUM)
+gen.add( "mode", str_t, SensorLevels.RECONFIGURE_RUNNING, "", 
+         mdc.MOTOR_MODES.keys()[0], edit_method=MOTOR_MODE_ENUM)
 gen.add( "dig1_pin", int_t, SensorLevels.RECONFIGURE_RUNNING, "", 
          mdc.GPIO_PINS[0], min(mdc.GPIO_PINS), max(mdc.GPIO_PINS), edit_method=GPIO_PIN_ENUM)
 gen.add( "dig2_pin", int_t, SensorLevels.RECONFIGURE_RUNNING, "", 
