Added dummy i2c parameter.

--- a/motor_driver/cfg/Motor.cfg
+++ b/motor_driver/cfg/Motor.cfg
@@ -15,7 +15,7 @@ gen.add("address", str_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic
 gen.add("invert", bool_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", False )
 gen.add("soft_disable", bool_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", False )
 gen.add("offset_voltage", double_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", 0.0, -5.0, 5.0 )
-# gen.add("dummy_i2c", bool_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", False )
+gen.add("dummy_i2c", bool_t, SensorLevels.RECONFIGURE_RUNNING, "My very own dynamic parameter.", False )
 
 gen.add( "dir_pin", int_t, SensorLevels.RECONFIGURE_RUNNING, "", 
          mdc.GPIO_PINS[0], min(mdc.GPIO_PINS), max(mdc.GPIO_PINS), edit_method=GPIO_PIN_ENUM)
